--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
     "deploy": "gh-pages -d dist"
   },
   "devDependencies": {
+    "gh-pages": "^4.0.0",
     "vite": "^3.2.3"
   },
   "dependencies": {
-    "gh-pages": "^4.0.0",
+    "git": "^0.1.5",
     "three": "^0.146.0"
   }
 }
